todo GAPP:
- processdialog, minimize or show on taskbar. Going to desktop fails now
- add log templates
- make more screen sizable, but also settings screen

todo GAPP SF:

todo GAPP/GAPP SF

V1.10.7.0
- gappsf: fix: Cachelist, fixed sorting on geocache type
- gappsf: fix: Cachelist, fixed color of archived

V1.10.6.0
- gappsf: fix: Deleting of geocaches with a UserWayoint caused the application to shut down.

V1.10.5.0
- gapp: fix: Live API, get personal notes a delay added between calls
- gappsf: fix: Live API, get personal notes a delay added between calls
- gapp: Munzee, removed import from munzee.dfx.at due to discontinued service
- gappsf: Munzee, removed import from munzee.dfx.at due to discontinued service
- gapp: fix: Removed dialog for downloading Open Street Maps due to discontinued (FTP) service
- gappsf: fix: Removed dialog for downloading Open Street Maps due to discontinued (FTP) service
- gapp: add: Export HTML, added export notes
- gappsf: add: Export HTML, added export notes

V1.10.4.0

- gapp: fix: adapt GPX files changes of geocaching.com for child waypoints
- gappsf: fix: adapt GPX files changes of geocaching.com for child waypoints

V1.10.3.0

- gappsf: LiveAPI, import pocket query fix

V1.10.2.0

- gapp: chat, connect to new server
- gapp: Google Map, child waypoints did not show when there was a linefeed in the name
- gapp: Export to Excel, the order of the fields are now restored correctly
- gapp: Export to HTML, the order of the fields are now restored correctly
- gappsf: chat, connect to new server
- gappsf: Google Map, child waypoints did not show when there was a linefeed in the name
- gappsf: Export to Excel, the fields are now restored correctly
- gappsf: Export to HTML, the fields are now restored correctly

V1.10.1.0

- gapp: fix: Export to HTML now has meta tag utf-8 encoded for correct display of some characters
- gapp: change: add color option for corrected in cache list